# PyReconstruct

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  WHATS_NEW.md  mkdocs.yml  pyproject.toml  readme.md  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-installers.yml  docs.yml  publish-pypi.yml  test.yml
PyReconstruct/: cli.py  run.py
benchmarks/: README.md  REPORT.md  aggregate.py  bench_object_list.py  build_report.py  fork_requirements.txt  harness.py  orchestrate.py  results.jsonl  summary.csv
dev/: dev-run.sh  studio_preview.py  theme_preview.py  update_dialog_preview.py
docs/: DEV_UV.md  RELEASE_CHANNELS.md  USER_GUIDE.md  index.md  performance.md  requirements.txt
docs/wiki/: 3D-Reconstruction.md  Alignment.md  Core-Concepts.md  Credits.md  Data-Lists.md  (+14 more)
packaging/: PyReconstruct.spec  README.md  rthook_gl.py  rthook_ssl.py  smoke_test.py
scripts/: prune_prereleases.py
tests/: _palette_fixture.py  conftest.py  test_3d_autorefresh_option.py  test_3d_scene_stale_mesh.py  test_affine_align_guard.py  test_atomic_io.py  test_autoseg_color_options.py  test_autoseg_palette.py  test_autoseg_palette_editor.py  test_autoseg_reapply_colors.py  test_copy_traces_to_sections.py  test_corr_align_propagate.py  test_create_ztrace_default.py  test_cut_traces_single_point.py  test_data_cleanup.py  test_delete_flags_guard.py  test_edit_object_attributes.py  test_error_report.py  test_export_to_zarr_guard.py  test_fast_json_ascii_interop.py  test_fast_json_roundtrip.py  test_first_launch.py  test_geometry.py  test_get_img_dims_missing.py  test_get_zarr_array_raises.py  test_icons.py  test_import_from_series_guard.py  test_import_section_skip_missing.py  test_import_widget_accept_reset.py  test_interpolate_points_guard.py  test_invert_hide_others.py  test_invert_selection_hide_unselected.py  test_labels_to_objects_guard.py  test_lists_panel.py  test_log_trim_section_range.py  test_logging_setup.py  test_menu_label_style.py  test_menu_parity_hoist.py  test_menu_restructure.py  test_missing_return_guards.py  (+35 more)
(+106 files in other folders)
